--- a/siteexemplo/indx.html
+++ b/siteexemplo/indx.html
@@ -8,7 +8,9 @@
 <body>
     <hr>
     <h1>Primeiro repositório</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quisquam officia eius quo molestiae itaque reiciendis commodi at doloremque repellendus dignissimos eaque eligendi aliquid quibusdam accusamus facilis quasi, est odio?
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quisquam officia eius quo molestiae itaque  reiciendis commodi at doloremque repellendus dignissimos eaque eligendi aliquid quibusdam accusamus facilis quasi, est odio?
+    </p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum est dignissimos officiis ad officia recusandae repellendus esse libero laudantium fugit iste illum, incidunt accusantium praesentium corrupti facere sunt eaque vero.
     </p>
 </body>
 </html>
